--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-  "name": "credit-card-validator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
-    "jsdom": "^24.1.0",
-    "puppeteer": "^22.13.1",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  }
+	"name": "credit card validator",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve --config webpack.dev.js",
+		"build": "webpack --config webpack.prod.js",
+		"lint": "eslint .",
+		"test": "jest",
+		"coverage": "jest --coverage",
+		"doc": "jsdoc -c jsdoc.conf.json",
+		"preshow: coverage": "npm run coverage",
+		"show: coverage": "live-server coverage/lcov-report",
+		"preshow: doc": "npm run doc",
+		"show: doc": "live-server doc",
+		"preshow:dist": "npm run build",
+		"show: dist": "live-server dist"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.24.7",
+		"@babel/preset-env": "^7.24.7",
+		"@eslint/js": "^9.5.0",
+		"@typescript-eslint/eslint-plugin": "^7.13.1",
+		"babel-loader": "^8.3.0",
+		"css-loader": "^7.1.2",
+		"eslint": "^9.5.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-jest": "^28.6.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.6.0",
+		"jest": "^29.7.0",
+		"style-loader": "^4.0.0",
+		"webpack": "^5.93.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4"
+	}
 }
