--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
 		"jest": "^29.7.0",
+		"mini-css-extract-plugin": "^2.9.0",
 		"style-loader": "^4.0.0",
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4",
